fix: display more information in dialog exam shift report

--- a/src/app/shared/dialogs/edit-shift-report/edit-shift-report.component.less
+++ b/src/app/shared/dialogs/edit-shift-report/edit-shift-report.component.less
@@ -1,3 +1,7 @@
-label:not(:first-child) {
-  @apply mt-5;
+td {
+  @apply p-1;
+  
+  &:first-child {
+    @apply w-64;
+  }
 }
