--- a/src/custom/taiga-ui/table.less
+++ b/src/custom/taiga-ui/table.less
@@ -1,5 +1,5 @@
 table {
-  tr:nth-child(odd) td {
+  &[tuiTable] tr:nth-child(odd) td {
     background: var(--tui-base-02);
   }
 
